hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_top_pass_array.php
<?php

$list = new SplDoublyLinkedList();
$list->push("top");
$list->top(array());

?>